# ort

./: gradle.properties
.reuse/: dep5
analyzer/src/funTest/assets/projects/synthetic/: poetry-expected-output.yml
analyzer/src/funTest/assets/projects/synthetic/poetry/: pyproject.toml
analyzer/src/funTest/kotlin/managers/: PoetryFunTest.kt  PubFunTest.kt
analyzer/src/main/kotlin/managers/: Poetry.kt
evaluator/src/main/kotlin/: DependencyRule.kt
model/src/main/resources/: reference.conf
scanner/src/funTest/kotlin/storages/: ClearlyDefinedStorageFunTest.kt
scanner/src/main/kotlin/scanners/fossid/: FossId.kt  FossIdConfig.kt
scanner/src/main/kotlin/scanners/scancode/: ScanCodeResultParser.kt
scanner/src/main/kotlin/storages/: ClearlyDefinedStorage.kt
scanner/src/test/kotlin/scanners/scancode/: ScanCodeResultParserTest.kt
